--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 diffusers==0.33.1
-keras==2.14.0
+# keras==2.14.0
 nltk==3.8.1
-numpy==2.2.6
+numpy==1.26.4
 openai==1.79.0
 pandas==2.2.3
 rich==14.0.0
-scikit_learn==1.6.1
+scikit-learn==1.6.1
 scipy==1.15.3
 sentence_transformers==4.0.1
 torch==2.3.1
 tqdm==4.66.4
 transformers==4.51.3
+pyarrow
